--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.2",
     "node-sass": "^6.0.1",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
