--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.2",
     "node-sass": "^6.0.1",
